--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0"
