--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.7.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "^0.81.5",
